--- a/client/app/templates/about.hbs
+++ b/client/app/templates/about.hbs
@@ -1,5 +1,7 @@
 <p>about yo</p>
 
 {{#each model as |user|}}
-  <h2>{{user.name}}</h2>
+  <h2>name: {{user.name}}</h2>
+  <h2>username: {{user.username}}</h2>
+  <h2>email: {{user.email}}</h2>
 {{/each}}
