Modify about route to make use of RSVP

--- a/client/app/templates/about.hbs
+++ b/client/app/templates/about.hbs
@@ -1,6 +1,6 @@
 <p>about yo</p>
 
-{{#each model as |user|}}
+{{#each model.users as |user|}}
   <h2>name: {{user.name}}</h2>
   <h2>username: {{user.username}}</h2>
   <h2>email: {{user.email}}</h2>
