--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -1,6 +1,39 @@
-<h2 id="title">Welcome to Flamber</h2>
-
-{{#link-to "index"}}Home{{/link-to}}
-{{#link-to "about"}}About{{/link-to}}
-
-{{outlet}}
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Flamber</a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li>{{#link-to "index"}}Home{{/link-to}}</li>
+        <li>{{#link-to "about"}}About{{/link-to}}</li>
+      </ul>
+      <!--<form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>-->
+      <!--<ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Language: <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+               todo i18n 
+          </ul>
+        </li>
+      </ul>-->
+    </div>
+  </div>
+</nav>
+<div class="panel-body" style="margin-top: 50px">
+    <div class="container">
+        <h2 id="title">Welcome to Flamber</h2>
+        {{outlet}}
+    </div>
+</div>
