--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Flamber</a>
+      <a class="navbar-brand" href="#"><img src="assets/images/flamber-logo.png" style="width: 15px"/></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
