Modify on hover a colors

--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -10,7 +10,7 @@
       <a class="navbar-brand" href="#"><img src="assets/images/flamber-logo.png" style="width: 15px"/></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav nav-list">
         <li>{{#link-to "index"}}Home{{/link-to}}</li>
         <li>{{#link-to "about"}}About{{/link-to}}</li>
       </ul>
