Add login-form to index

--- a/client/app/templates/index.hbs
+++ b/client/app/templates/index.hbs
@@ -1,4 +1,6 @@
 <div>
     <h1>Welcome to Flamber.</h1>
     <p>Connect with your friends or enemies.</p>
+    {{#login-form}}
+    {{/login-form}}
 </div>
