--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
     <script src="{{ url_for('static', filename='scripts/vendor/angular-aria/angular-aria.js' )}}" type="text/javascript"></script>
     <script src="{{ url_for('static', filename='scripts/vendor/angular-animate/angular-animate.js' )}}" type="text/javascript"></script>
     <script src="{{ url_for('static', filename='scripts/vendor/angular-material/angular-material.js' )}}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='scripts/vendor/bootstrap-sass/assets/javascripts/bootstrap.js' )}}" type="text/javascript"></script>
     
     <script src="{{ url_for('static', filename='release/app.js' )}}" type="text/javascript"></script>
   </head>
