--- a/static/css/app.scss
+++ b/static/css/app.scss
@@ -1,2 +1,3 @@
 @import "../scripts/vendor/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 @import "layout/_body.scss";
+@import "layout/_nav.scss";
