--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,65 @@
 <html>
-  <head>
-    <title>Flamber</title>
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='scripts/vendor/angular-material/angular-material.css' )}}" type="text/css" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='release/app.css' )}}" type="text/css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    
-    <script src="{{ url_for('static', filename='scripts/vendor/jquery/dist/jquery.js' )}}" type="text/javascript"></script>
-    <script src="{{ url_for('static', filename='scripts/vendor/angular/angular.js' )}}" type="text/javascript"></script>
-    <script src="{{ url_for('static', filename='scripts/vendor/angular-ui-router/release/angular-ui-router.js' )}}" type="text/javascript"></script>
-    <script src="{{ url_for('static', filename='scripts/vendor/angular-aria/angular-aria.js' )}}" type="text/javascript"></script>
-    <script src="{{ url_for('static', filename='scripts/vendor/angular-animate/angular-animate.js' )}}" type="text/javascript"></script>
-    <script src="{{ url_for('static', filename='scripts/vendor/angular-material/angular-material.js' )}}" type="text/javascript"></script>
-    <script src="{{ url_for('static', filename='scripts/vendor/bootstrap-sass/assets/javascripts/bootstrap.js' )}}" type="text/javascript"></script>
-    
-    <script src="{{ url_for('static', filename='release/app.js' )}}" type="text/javascript"></script>
-  </head>
-  
-  <body>
-    <div ui-view></div>
-  </body>
+<head>
+  <title>Flamber</title>
+
+  <link rel="stylesheet" href="{{ url_for('static', filename='scripts/vendor/angular-material/angular-material.css' )}}" type="text/css"
+  />
+  <link rel="stylesheet" href="{{ url_for('static', filename='release/app.css' )}}" type="text/css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
+  <script src="{{ url_for('static', filename='scripts/vendor/jquery/dist/jquery.js' )}}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='scripts/vendor/angular/angular.js' )}}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='scripts/vendor/angular-ui-router/release/angular-ui-router.js' )}}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='scripts/vendor/angular-aria/angular-aria.js' )}}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='scripts/vendor/angular-animate/angular-animate.js' )}}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='scripts/vendor/angular-material/angular-material.js' )}}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='scripts/vendor/bootstrap-sass/assets/javascripts/bootstrap.js' )}}" type="text/javascript"></script>
+
+  <script src="{{ url_for('static', filename='release/app.js' )}}" type="text/javascript"></script>
+</head>
+
+<body>
+  <nav class="global-nav navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+          aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button> 
+      <!--{{#link-to "index" class="navbar-brand"}}<img src="assets/images/flamber-logo.png" style="width: 15px"
+        />{{/link-to}}-->
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav nav-list">
+          <!--<li>{{#link-to "index"}}Home{{/link-to}}</li>
+          <li>{{#link-to "about"}}About{{/link-to}}</li>-->
+        </ul>
+        <!--<form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>-->
+        <!--<ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Language: <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+               todo i18n 
+          </ul>
+        </li>
+      </ul>-->
+      </div>
+    </div>
+  </nav>
+  <div class="panel-body" style="margin-top: 50px">
+    <div class="container" ui-view>
+      
+    </div>
+  </div>
+</body>
+
 </html>
