--- a/templates/index.html
+++ b/templates/index.html
@@ -30,13 +30,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button> 
-      <!--{{#link-to "index" class="navbar-brand"}}<img src="assets/images/flamber-logo.png" style="width: 15px"
-        />{{/link-to}}-->
+      <a ui-sref="home"><img src="assets/images/flamber-logo.png" style="width: 15px" /></a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav nav-list">
-          <!--<li>{{#link-to "index"}}Home{{/link-to}}</li>
-          <li>{{#link-to "about"}}About{{/link-to}}</li>-->
+          <li><a ui-sref="home">Home</a></li>
+          <li><a ui-sref="about">About</a></li>
         </ul>
         <!--<form class="navbar-form navbar-left" role="search">
         <div class="form-group">
