Fix src link to flamber-logo

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button> 
-      <a ui-sref="home"><img src="assets/images/flamber-logo.png" style="width: 15px" /></a>
+      <a ui-sref="home" class="navbar-brand"><img src="{{ url_for('static', filename='images/flamber-logo.png' )}}"" style="width: 15px" /></a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav nav-list">
