--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,7 @@
 <head>
   <title>Flamber</title>
 
-  <link rel="stylesheet" href="{{ url_for('static', filename='scripts/vendor/angular-material/angular-material.css' )}}" type="text/css"
-  />
+  <link rel="stylesheet" href="{{ url_for('static', filename='scripts/vendor/angular-material/angular-material.css' )}}" type="text/css"/>
   <link rel="stylesheet" href="{{ url_for('static', filename='release/app.css' )}}" type="text/css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
@@ -37,12 +36,6 @@
           <li><a ui-sref="home">Home</a></li>
           <li><a ui-sref="about">About</a></li>
         </ul>
-        <!--<form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>-->
         <!--<ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Language: <span class="caret"></span></a>
