--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 
   <script src="{{ url_for('static', filename='scripts/vendor/jquery/dist/jquery.js' )}}" type="text/javascript"></script>
   <script src="{{ url_for('static', filename='scripts/vendor/angular/angular.js' )}}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='scripts/vendor/satellizer/satellizer.min.js' )}}" type="text/javascript"></script>  
   <script src="{{ url_for('static', filename='scripts/vendor/angular-ui-router/release/angular-ui-router.js' )}}" type="text/javascript"></script>
   <script src="{{ url_for('static', filename='scripts/vendor/angular-aria/angular-aria.js' )}}" type="text/javascript"></script>
   <script src="{{ url_for('static', filename='scripts/vendor/angular-animate/angular-animate.js' )}}" type="text/javascript"></script>
