--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,14 @@
           <li><a ui-sref="home">Home</a></li>
           <li><a ui-sref="about">About</a></li>
         </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li ng-if="!isAuthenticated()">
+            <a ui-sref="login">Login</a>
+          </li>
+          <li ng-if="isAuthenticated()">
+            <a ui-sref="logout">Logout</a>
+          </li>
+        </ul>
         <!--<ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Language: <span class="caret"></span></a>
