Modify login form

--- a/static/css/app.scss
+++ b/static/css/app.scss
@@ -1,3 +1,4 @@
 @import "../scripts/vendor/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 @import "layout/_body.scss";
 @import "layout/_nav.scss";
+@import "layout/_login.scss";
