Modify signup form aswell

--- a/static/css/layout/_login.scss
+++ b/static/css/layout/_login.scss
@@ -1,8 +1,12 @@
-.form-signin {
-    width: 300px;
+.form-auth {
+    width: 350px;
     margin: 0 auto;
 }
 
 .form-control {
     margin-bottom: 5px;
+}
+
+.form-auth-heading {
+    color: #21aeec;
 }
