--- a/static/client/partials/login.html
+++ b/static/client/partials/login.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <form class="form-signin" ng-submit="LoginCtrl.login()">
-      <h2 class="form-signin-heading text-center">Welcome back</h2>
+    <form class="form-auth" ng-submit="LoginCtrl.login()">
+      <h2 class="form-auth-heading text-center">Welcome back!</h2>
       <label for="username" class="sr-only">Username</label>
       <input type="text" id="username" class="form-control" ng-model="LoginCtrl.username" placeholder="Username" required autofocus>
       <label for="password" class="sr-only">Password</label>
