--- a/app/static/app/components/login/login.component.html
+++ b/app/static/app/components/login/login.component.html
@@ -1,3 +1,11 @@
-<p>
-  login works!
-</p>
+<form class="form-inline">
+  <div class="form-group">
+    <label class="sr-only">Email address</label>
+    <input type="email" class="form-control" placeholder="Email">
+  </div>
+  <div class="form-group">
+    <label class="sr-only">Password</label>
+    <input type="password" class="form-control" placeholder="Password">
+  </div>
+  <button type="submit" class="btn btn-default">Sign in</button>
+</form>
