Add basic design for login form

--- a/app/static/app/app.component.html
+++ b/app/static/app/app.component.html
@@ -2,5 +2,7 @@
   {{title}}
 </h1>
 
-<app-login></app-login>
-<app-sign-up></app-sign-up>
+<div class="container">
+  <app-login></app-login>
+  <app-sign-up></app-sign-up>
+</div>
