--- a/app/static/app/components/login/login.component.html
+++ b/app/static/app/components/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="login__form">
-	<input type="Username" class="form-control login__form__input" placeholder="Username">
-	<input type="password" class="form-control login__form__input" placeholder="Password">
-	<button type="submit" class="btn btn-default login__form__button">Sign in</button>
+<div class="sign__form">
+	<input type="Username" class="form-control sign__form__input" placeholder="Username">
+	<input type="password" class="form-control sign__form__input" placeholder="Password">
+	<button type="submit" class="btn btn-default sign__form__button">Sign in</button>
 </div>
