--- a/app/static/app/components/sign-up/sign-up.component.html
+++ b/app/static/app/components/sign-up/sign-up.component.html
@@ -1,11 +1,5 @@
-<form class="form-inline">
-  <div class="form-group">
-    <label class="sr-only" for="exampleInputEmail3">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Email">
-  </div>
-  <div class="form-group">
-    <label class="sr-only" for="exampleInputPassword3">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword3" placeholder="Password">
-  </div>
-  <button type="submit" class="btn btn-default">Sign up</button>
-</form>
+<div class="sign__form">
+	<input type="Username" class="form-control sign__form__input" placeholder="Username">
+	<input type="password" class="form-control sign__form__input" placeholder="Password">
+	<button type="submit" class="btn btn-default sign__form__button">Sign up</button>
+</div>
