--- a/app/static/app/components/sign-up/sign-up.component.html
+++ b/app/static/app/components/sign-up/sign-up.component.html
@@ -1,5 +1,6 @@
 <div class="sign__form">
-	<input type="Username" class="form-control sign__form__input" placeholder="Username">
-	<input type="password" class="form-control sign__form__input" placeholder="Password">
-	<button type="submit" class="btn btn-default sign__form__button">Sign up</button>
+	<input type="text" class="form-control sign__form__input" placeholder="Username" [(ngModel)]="username">
+	<input type="text" class="form-control sign__form__input" placeholder="Mail" [(ngModel)]="mail">
+	<input type="password" class="form-control sign__form__input" placeholder="Password" [(ngModel)]="password">
+	<button type="submit" class="btn btn-default sign__form__button" (click)="signUp()">Sign up</button>
 </div>
