Get rid of previous angularJS app leftovers, Make username show when user is loggedin

--- a/app/static/app/app.component.html
+++ b/app/static/app/app.component.html
@@ -1,5 +1,6 @@
-<h1>
-  {{title}}
-</h1>
-
-<router-outlet></router-outlet>
+<app-nav></app-nav>
+<div class="panel-body" style="margin-top: 50px">
+	<div class="container" ui-view>
+		<router-outlet></router-outlet>
+	</div>
+</div>
