--- a/app/static/app/app.component.html
+++ b/app/static/app/app.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 <div class="panel-body" style="margin-top: 50px">
-	<div class="container" ui-view>
+	<div class="container">
 		<router-outlet></router-outlet>
 	</div>
 </div>
