--- a/app/static/styles.scss
+++ b/app/static/styles.scss
@@ -7,6 +7,7 @@
     border-radius: 5px;
     color: white !important;
 	font-weight: 300 !important;
+    margin-bottom: 10px;
 	
 	::-webkit-input-placeholder { /* WebKit browsers */
         color: white !important;
